# kvs

./: .gitignore  Cargo.toml  Makefile  README.md
src/: cli.rs  datafile.rs  error.rs  key_dir.rs  kv.rs  lib.rs  log_entry.rs
