[package]
name = "kvs"
version = "0.1.0"
edition = "2021"
authors = ["Dharan Aditya <dharan.aditya@gmail.com>"]
description = "A key-value store"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.17", features = ["derive"] }

# Dev-dependencies are not used when compiling a package for building,
# but are used for compiling tests, examples, and benchmarks.
[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
tempfile = "3.0.7"
walkdir = "2.2.7"
